Search and replace functionality

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-chatdoc_api_key="ak-fs1AbigwZQt55WDdvKhx9XXBFXc8PzljgKC0lHQTHAI"
+chatdoc_api_key=ak-fs1AbigwZQt55WDdvKhx9XXBFXc8PzljgKC0lHQTHAI
+openai_api_key="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"
